@@ -1,5 +1,5 @@
 /*
- * $Id: datablock.c,v 1.4 2014/03/23 13:27:27 markisch Exp $
+ * $Id: datablock.c,v 1.5 2014/04/05 06:17:08 markisch Exp $
  */
 /* GNUPLOT - datablock.c */
 
@@ -219,9 +219,11 @@ enlarge_datablock(struct value *datablock_value, int extra)
     nsize = ((nlines+1 + extra + blocksize-1) / blocksize) * blocksize;
 
     /* only resize if necessary */
-    if ((osize != nsize) || (extra == 0) || (nlines == 0))
+    if ((osize != nsize) || (extra == 0) || (nlines == 0)) {
 	datablock_value->v.data_array =
 	    (char **) gp_realloc(datablock_value->v.data_array,  nsize * sizeof(char *), "resize_datablock");
+	datablock_value->v.data_array[nlines] = NULL;
+    }
 
     return nlines;
 }
