@@ -4,6 +4,9 @@
 	Change fixed-length fontname storage to dynamic (cairo + wxt terminals)
 	to prevent crashes found by fuzzing.
 
+	* src/datablock.c:  The storage in a zero-length datablock was not
+	initialized.
+
 2015-07-12  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/command.c (bind_command) src/mouse.c (bind_fmt):
